components/Layout/Layout.module.scss
@use "../../styles/variables" as v;

.layout {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  width: 100vw;
  min-width: 300px;
  background-color: v.$color-navy;

  .sidebar {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    position: fixed;
    left: 0;
    width: 7rem;
  }

  .header {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    top: 0;
    z-index: 10;
    width: 100vw;
    height: 6rem;
    background-color: v.$color-navy-8;

    transform: translateY(0);
    transition: transform 0.5s;

    &.hide {
      transform: translateY(-6rem);
    }
  }

  .content {
    width: 100%;
    display: flex;
    justify-content: center;

    &.active {
      filter: blur(4px);
    }
  }

  .overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    transition: background-color 0.5s;
    z-index: -1;

    &.active {
      background-color: v.$color-navy-8;
      z-index: 1;
    }
  }

  .footer {
    display: none;
  }
}

@media (max-width: 992px) {
  .layout {
    .sidebar {
      width: 5rem;
    }
  }
}

@media (max-width: 768px) {
  .layout {
    .sidebar {
      display: none;
    }

    .footer {
      display: flex;
    }
  }
}

